# wiggle-motion-service

./: README.md  pyproject.toml  requirements.txt
src/wiggle_motion_service/: install.py  test.py
src/wiggle_motion_service/service/: wiggle-motion.service
